Rename the project

--- a/cliff.toml
+++ b/cliff.toml
@@ -3,7 +3,7 @@
 
 [remote.github]
 owner = "tuist"
-repo = "apple-bundle-size-analyzer"
+repo = "AppleBundleSizeAnalyzer"
 # token = ""
 
 [changelog]
