--- a/.gitignore
+++ b/.gitignore
@@ -39,9 +39,6 @@ Temporary Items
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
-*.xcodeproj
-*.xcworkspace
-
 ## User settings
 xcuserdata/
 
@@ -66,7 +63,6 @@ DerivedData/
 *.hmap
 
 ## App packaging
-*.ipa
 *.dSYM.zip
 *.dSYM
 
@@ -82,7 +78,7 @@ playground.xcworkspace
 # *.xcodeproj
 # Xcode automatically generates this directory with a .xcworkspacedata file and xcuserdata
 # hence it is not needed unless you have added a package configuration file to your project
-# .swiftpm
+.swiftpm
 
 .build/
 
